# HexEngine

./: .gitignore  AbstractResource.cpp  AbstractScene.cpp  AssetManager.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GLProgram.cpp  GLProgram.hpp  GameCam.cpp  GameCam.hpp  GameObject.cpp  GameObject.hpp  Hex.hpp  HexGameScene.cpp  HexGameScene.hpp  Input.hpp  LICENSE  MacApp.h  MacApp.mm  Makefile  Mesh.hpp  Texture.cpp  testCube.cpp  testCube.hpp
Examples/: CMakeLists.txt
Examples/BasicApplication/: CMakeLists.txt
Examples/BasicApplication/include/: BasicApplication.hpp  BasicObject.hpp  BasicScene.hpp
Examples/BasicApplication/src/: BasicApplication.cpp  BasicObject.cpp  BasicScene.cpp  Main.cpp  Shaders.metal
Examples/MultiScenes/: CMakeLists.txt
Examples/MultiScenes/include/: BasicObject.hpp  MultiApplication.hpp  SceneOne.hpp  SceneTwo.hpp
Examples/MultiScenes/src/: BasicObject.cpp  Main.cpp  MultiApplication.cpp  SceneOne.cpp  SceneTwo.cpp
Math/: Matrix4x4.hpp  Vector3.hpp  Vector4.hpp
PrutEngine/: CMakeLists.txt
PrutEngine/include/: AbstractResource.hpp  AbstractScene.hpp  Application.hpp  AssetManager.hpp  OpenGL.hpp  Shader.hpp  Texture.hpp
PrutEngine/include/Math/: Quaternion.hpp  Vector2.hpp
PrutEngine/include/prutengine/: AbstractScene.hpp  Application.hpp  AssetManager.hpp  Camera.hpp  GameObject.hpp  GraphicsController.hpp  Node.hpp  PrutWindow.hpp  Renderer.hpp  Transform.hpp
PrutEngine/include/prutengine/data/: AbstractResource.hpp  GLProgram.hpp  GraphicsProgram.hpp  Mesh.hpp  Shader.hpp  Texture.hpp
PrutEngine/include/prutengine/deprecated/: TestObject.hpp  TestScene.hpp
PrutEngine/include/prutengine/exceptions/: AssetNotLoadedException.hpp  InitializationException.hpp  NotYetInitializedException.hpp  PrutEngineException.hpp  RenderingException.hpp
PrutEngine/include/prutengine/math/: Matrix.hpp  Matrix4x4.hpp  Quaternion.hpp  Utilities.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
PrutEngine/include/prutengine/platform/: IOSApp.h  Input.hpp  MacApp.h  MetalRenderer.h  MetalShaderTypes.h  MetalViewController.h  OpenGL.hpp
PrutEngine/include/prutengine/platform/apple/: AbstractWindow.h  AppDelegate.h  LaunchWindow.h  MacApp.h  MetalRenderer.h  MetalShaderTypes.h  MetalWindow.h  OpenGLWindow.h
PrutEngine/src/: AbstractResource.cpp  AbstractScene.cpp  Application.cpp  AssetManager.cpp  AssetNotLoadedException.cpp  Camera.cpp  GLProgram.cpp  GameObject.cpp  GraphicsController.cpp  Hex.cpp  HexGameScene.cpp  MacApp.mm  Mesh.cpp  Node.cpp  NotYetInitializedException.cpp  Renderer.cpp  RenderingException.cpp  Shader.cpp  TestObject.cpp  TestScene.cpp  Texture.cpp  Transform.cpp
PrutEngine/src/data/: AbstractResource.cpp  GLProgram.cpp  GraphicsProgram.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
PrutEngine/src/exceptions/: InitializationException.cpp  NotYetInitializedException.cpp  RenderingException.cpp
PrutEngine/src/platform/: OpenGL.cpp
PrutEngine/src/platform/apple/: AbstractWindow.mm  AppDelegate.mm  IOSApp.mm  MacApp.mm  MetalRenderer.mm  MetalViewController.mm  MetalWindow.mm  Miscellaneous.mm  OpenGLWindow.mm
PrutEngine/src/platform/gnu_linux/: GnuXApp.cpp
Resources/Assets/Shaders/: UnshadedFragment.glsl  UnshadedVertex.glsl
