cmake_minimum_required (VERSION 3.5)
project(PrutEngine)
set (CMAKE_CXX_STANDARD 14)

set(PrutEngine_MAJOR_VERSION 0)
set(PrutEngine_MINOR_VERSION 6)
set(PrutEngine_PATCH_VERSION 1)
set(PrutEngine_version ${PrutEngine_MAJOR_VERSION}.${PrutEngine_MINOR_VERSION}.${PrutEngine_PATCH_VERSION})
set(PrutEngine_name PrutEngine)

add_subdirectory(PrutEngine)