CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(PrutEngine)
SET (CMAKE_CXX_STANDARD 14)

SET(PRUT_ENGINE_MAJOR_VERSION 2)
SET(PRUT_ENGINE_MINOR_VERSION 0)
SET(PRUT_ENGINE_PATCH_VERSION 0)
SET(PRUT_ENGINE_VERSION ${PRUT_ENGINE_MAJOR_VERSION}.${PRUT_ENGINE_MINOR_VERSION}.${PRUT_ENGINE_PATCH_VERSION})
SET(PRUT_ENGINE_NAME PrutEngine)

ADD_SUBDIRECTORY(PrutEngine)
ADD_SUBDIRECTORY(examples)