CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
SET (CMAKE_CXX_STANDARD 14)

PROJECT(BASIC_APPLICATION)

SET(BASIC_APPLICATION_SOURCES
    src/BasicApplication.cpp
    src/BasicObject.cpp
    src/BasicScene.cpp
    src/Main.cpp
)

FIND_LIBRARY(METAL_LIBRARY Metal REQUIRED)
FIND_LIBRARY(METALKIT_LIBRARY MetalKit REQUIRED)
FIND_LIBRARY(MODELIO_LIBRARY ModelIO REQUIRED)

SET(BASIC_APPLICATION_METAL_SHADERS
    src/Shaders.metal
) 

SET_SOURCE_FILES_PROPERTIES(
    src/Shaders.metal
    PROPERTIES LANGUAGE adfs
)


INCLUDE_DIRECTORIES( ${METAL_INCLUDE_DIR})
ADD_EXECUTABLE(
    BasicApplication 
    ${BASIC_APPLICATION_SOURCES}
    ${BASIC_APPLICATION_METAL_SHADERS}
)

INCLUDE_DIRECTORIES(
    ${PRUT_ENGINE_SOURCE_DIR}/include
    ./include
)
ADD_CUSTOM_COMMAND(
    TARGET BasicApplication POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_SOURCE_DIR}/Resources $<TARGET_FILE_DIR:BasicApplication>
)

TARGET_LINK_LIBRARIES(
    BasicApplication 
    ${PRUT_ENGINE_BUILD_DIR}
    ${METAL_LIBRARY}  
    ${METALKIT_LIBRARY}
    ${MODELIO_LIBRARY}
    PrutEngine
)